tests/cases/vectors/errors/vector-method-immutable.ari
fn main() -> i64 {
  let values: Vec[i64] = [];
  values.push(1);
  return 0;
}
